fixed overlap div when expand navbar on mobile view

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 .div--height-max {
   display: flex;
   flex-flow: column;
-  height: 100vh;
+  min-height: 100vh;
 }
